src/test/ui/parser/mbe_missing_right_paren.stderr
error: this file contains an un-closed delimiter
  --> $DIR/mbe_missing_right_paren.rs:3:19
   |
LL | macro_rules! abc(ؼ
   |                 - ^
   |                 |
   |                 un-closed delimiter

error: macros that expand to items must be delimited with braces or followed by a semicolon
  --> $DIR/mbe_missing_right_paren.rs:3:17
   |
LL | macro_rules! abc(ؼ
   |                 ^^
   |
help: change the delimiters to curly braces
   |
LL | macro_rules! abc{ؼ}
   |                 ^ ^
help: add a semicolon
   |
LL | macro_rules! abc(ؼ;
   |                   ^

error: unexpected end of macro invocation
  --> $DIR/mbe_missing_right_paren.rs:3:1
   |
LL | macro_rules! abc(ؼ
   | ^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments

error: aborting due to 3 previous errors

