src/test/ui/parser/mbe_missing_right_paren.rs
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to 3 previous errors
macro_rules! abc(ؼ